--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-server.address=0.0.0.0
-server.port=8080
-spring.application.name=imeeting-backend
+server.port=7999
 
 # mybatis plus configuration
 mybatis.config-location=classpath:mybatis-config.xml
-mybatis.type-aliases-package=com.foresealife.imeeting.entity
+mybatis.type-aliases-package=com.echo.outqry.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -19,7 +17,7 @@ spring.datasource.hikari.idleTimeout=300000
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.leakDetectionThreshold=10000
 spring.datasource.hikari.maxLifetime=1800000
-
+spring.main.allow-bean-definition-overriding=true
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 jasypt.encryptor.password=mykey
 
@@ -41,7 +39,7 @@ server.tomcat.min-spare-threads=10
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.accesslog.enabled=true 
 server.tomcat.accesslog.buffered=true
-server.tomcat.accesslog.directory=/usr/local/qhapp/applogs/outqry
+server.tomcat.accesslog.directory=E:/boot/logs/accesslogs/
 server.tomcat.accesslog.file-date-format=_yyyyMMdd
 server.tomcat.accesslog.pattern=%t %h %{X-Forwarded-For}i %{User-Agent}i %r %s %D %b
 server.tomcat.accesslog.prefix=outqry_system_access
